# EPO-2

./: 3bit_flipflop.vhd  Mine_sensor_top_entity.vhd  Minedetector.vhd  Minedetector_debug.vhd  README.md  controller.vhd  controller_tb.vhd  general FSM.vhd  inputbuffer.vhdl  inputbuffer_tb.vhd  mine_FSM.vhd  minedetector.asc  motor_tb.vhdl  motorcontrol.vhdl  reset_timer.vhd  robot.vhd  testbench_timebase.vhdl  timebase.vhdl  uart1.vhd
Controller/: .clang-format  .gitignore  CMakeLists.txt  main.c
Controller/Control/: arguments.c  arguments.h  communication.c  communication.h  control.c  control.h  direction.c  direction.h  operations.h  states.c  states.h  stations.c  stations.h
Controller/Control/Algorithm/: board.c  board.h  defaults.c  defaults.h  queue.c  queue.h  types.h
Controller/Serial/: params.h  platform.h  serial.c  serial.h
Controller/Test/: algorithm.c  monitor.c  queuetest.c  serial.c
Final_Report/: Appendix_LF.tex  Introduction.tex  Notes.tex  chapter_C.tex  chapter_VHDL.tex  chapter_communication.tex  chapter_mine_sensor.tex  conclusion.tex
Final_Report/EPO 2 Report Template/: TUD-report2020.cls  chapter-0.tex  chapter-1.tex  chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  chapter-6.tex  main.tex  report.bib
LaTex/progeressthing/: main.tex
Project_Plan_EPO2/: chapter-0.tex  chapter-1.tex  chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  chapter-6.tex  chapter-7.tex  main.tex  report.bib
Project_Plan_EPO2/Project_Plan_EPO1/: TUD-report2020.cls  appendix-a.tex  chapter-1.tex  chapter-2.tex  chapter-3.tex  chapter-4.tex  chapter-5.tex  chapter-6.tex  main.tex
VHDL/: Controller 13 june NOT RIGHT!  Mine_sensor_top_entity.vhd  controller 5 juni.vhd  controller 8 juni.vhd  controller mei.vhd  controller met seperate state voor write_data  controller met uturn Pieter  controller.vhd  inputbuffer.vhdl  mine.ucf  mine_FSM.vhd  motorcontrol.vhdl  pins.ucf  robot.vhdl  timebase.vhdl
VHDL/Line follower/: 3bit_flipflop.vhd  controller.vhdl  controller_tb.vhd  inputbuffer.vhdl  inputbuffer_tb.vhd  motorcontrol.vhdl  robot.vhdl  (+2 more)
graphs/: TEK0000.CSV  TEK0001.CSV  TEK0002.CSV  TEK0003.CSV  TEK0004.CSV
simulation/: minedetector.asc
(+1 files in other folders)
